1.0 beta2
---------

* Switch to p4a.subtyper to make publications out of files
* Use Archetypes.schemaextender to marry normal and publication attributes in one interface

1.0 beta1
---------

* Plone 3 compatibility. Removed the PublicationFolder concept and base completely on Linguaplone

0.9 beta
--------

* initial release