@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: slc.publications
-Version: 1.0b1dev-r61094
+Version: 1.0b1dev-r61110
 Summary: A content type to store pdf publications
 Home-page: http://plone.org/products/PublicationProduct
 Author: Syslab.com GmbH
