@@ -1,15 +1,7 @@
 TODO
 ====
 
-- Once a folder or file has been changed to be a publication type, it doesn't 
-  show the archetype tabs anymore. Any additional attributes but the ones 
-  defined for the publication are no longer accessible
-  
-- Edit interface cleanup: We need a quicker way to add chapters.
-
 - i18n cleanup
-
-- add the image auto generation
 
 - add the related publications section
 
@@ -18,3 +10,4 @@ TODO
 - Review the PDF Parser. There are still other formats in PDF Files, we do not
   cover all of them. Find out why.
 
+- Improve support for bulkuploading files. If I upload files into a publication folder, I want them to be subtyped to publications automatically. If I upload multiple files that have a language abbreviation, I want them to be glued together to form the translation relation.
